--- a/package.json
+++ b/package.json
@@ -31,8 +31,10 @@
         "moongose": "^1.0.0",
         "multer": "^1.4.5-lts.1",
         "multer-s3": "^3.0.1",
+        "node-schedule": "^2.1.1",
         "node-unrar": "^0.1.6",
         "node-unrar-js": "^2.0.0",
+        "nodemailer": "^6.9.7",
         "nodemon": "^2.0.20",
         "shortid": "^2.2.16",
         "uid": "^2.0.1",
