--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "nodemailer": "^6.9.7",
         "nodemon": "^2.0.20",
         "shortid": "^2.2.16",
+        "twilio": "^4.19.0",
         "uid": "^2.0.1",
         "unrar": "^0.2.0",
         "unrar-js": "^0.2.3",
